--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,17 @@
-# Site settings
-title: CNMAT / UCB Digital Humanities
-email: shrubin2@berkeley.edu
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "/Project" # the subpath of your site, e.g. /blog/
-url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
-
-# Build settings
-markdown: kramdown
+authors:
+  hanzou:
+    name: Hanzou Hattori
+    display_name: Hanzou
+    gravatar: c66919cb194f96c696c1da0c47354a6a
+    email: hanzou@company.com
+    web: http://company.com
+    twitter: company
+    github: hhattori
+  jorgen:
+    name: Jörgen Mortensen
+    display_name: Jörgen
+    gravatar: 12e480a364a5c19214f99b4dfe9a11d5
+    email: jorgen@company.com
+    web: http://company.com
+    twitter: company
+    github: jorgenm
