--- a/_config.yml
+++ b/_config.yml
@@ -1,17 +1,13 @@
-authors:
-  hanzou:
-    name: Hanzou Hattori
-    display_name: Hanzou
-    gravatar: c66919cb194f96c696c1da0c47354a6a
-    email: hanzou@company.com
-    web: http://company.com
-    twitter: company
-    github: hhattori
-  jorgen:
-    name: Jörgen Mortensen
-    display_name: Jörgen
-    gravatar: 12e480a364a5c19214f99b4dfe9a11d5
-    email: jorgen@company.com
-    web: http://company.com
-    twitter: company
-    github: jorgenm
+# Site settings
+title: CNMAT / UCB Digital Humanities
+email1: shrubin2@berkeley.edu
+email2: juanmahvelez@gmail.com
+description: > # this means to ignore newlines until "baseurl:"
+  Both researchers are currently based in Berkeley, California. The funding for this research was generously provided by the University of California, Berkeley Digital Humanities Collaborative Research Grant, with support from the Andrew W. Mellon Foundation. We are also thankful for technological support from the Center for New Music and Audio Technologies (CNMAT)
+baseurl: "/Project" # the subpath of your site, e.g. /blog/
+url: "http://scottrubinmusic.com/" # the base hostname & protocol for your site
+github_username:  shrubin2
+github_username2:  juanmahvelez
+
+# Build settings
+markdown: kramdown
